tests/sksl/errors/RedeclareStructTypeWithName.glsl
### Compilation failed:

error: 3: symbol 'foo' was already defined
} foo;
  ^^^
1 error
